--- a/app/src/main/res/layout/renglon_amigos.xml
+++ b/app/src/main/res/layout/renglon_amigos.xml
@@ -8,7 +8,14 @@
         android:layout_height="wrap_content"
         android:padding="10dp">
 
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:id="@+id/renglon_amigo_img"
+            android:background="@color/colorPrimary"/>
+
         <LinearLayout
+            android:layout_marginLeft="65dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -30,6 +37,14 @@
 
         </LinearLayout>
 
+        <Button
+            android:id="@+id/renglon_amigo_btn_chat"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="60dp"
+            android:layout_centerVertical="true"
+            android:text="X" />
 
         <Button
             android:id="@+id/renglon_amigo_btn_call"
